# base-django

./: API_USAGE.md  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml
app/authentication/: urls.py  views.py
app/core/: settings.py  urls.py
app/product/: models.py  urls.py  views.py
app/product/migrations/: 0001_initial.py  0002_orderitem_order.py  0003_cart.py
